--- a/index.html
+++ b/index.html
@@ -2,61 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Plant Health Detection</title>
+  <title>Plant Health Checker</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       text-align: center;
-      background-image: url('https://images.unsplash.com/photo-1524592919377-d49c7e1ca5eb'); /* Background image */
-      background-size: cover;
-      background-position: center;
-      color: #ffffff;
-      padding: 20px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-top: 20px;
+      font-family: Arial, sans-serif;
+      background-color: #f0fff4;
+      padding: 30px;
     }
     #image-preview {
-      margin: 20px auto;
-      border: 4px solid #fff;
-      width: 200px;
-      height: 200px;
+      width: 250px;
+      height: 250px;
+      border-radius: 15px;
       object-fit: cover;
-      border-radius: 10px;
+      border: 2px solid green;
+      margin-top: 15px;
+    }
+    button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #28a745;
+      border: none;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
     }
     #label-container {
       margin-top: 20px;
-      font-size: 1.2em;
-    }
-    input[type="file"], button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 1em;
-      border-radius: 5px;
-      border: none;
-      cursor: pointer;
-    }
-    button {
-      background-color: #28a745;
-      color: white;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <h1>🌿 Plant Health Checker 🌿</h1>
-  <input type="file" id="imageUpload" accept="image/*">
-  <br>
-  <img id="image-preview" src="" alt="Upload preview">
-  <br>
+  <h1>🌿 Plant Health Checker</h1>
+  <input type="file" id="imageUpload" accept="image/*"><br>
+  <img id="image-preview" src="" alt="Image Preview"><br>
   <button onclick="predict()">Predict</button>
   <div id="label-container"></div>
 
-  <!-- TensorFlow.js and Teachable Machine -->
+  <!-- TFJS and TM image library -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest"></script>
+
   <script>
-    const URL = "./my_model/"; // Replace this with your hosted model path if on a server
+    const URL = "./my_model/"; // Make sure this folder is correctly placed and contains model.json, metadata.json, weights.bin
     let model, imageElement;
 
     async function loadModel() {
@@ -72,7 +62,7 @@
         reader.onload = function (e) {
           imageElement = new Image();
           imageElement.src = e.target.result;
-          imageElement.onload = function () {
+          imageElement.onload = () => {
             document.getElementById('image-preview').src = imageElement.src;
           };
         };
@@ -81,22 +71,19 @@
     });
 
     async function predict() {
-      if (!model) {
-        await loadModel();
-      }
+      if (!model) await loadModel();
       if (!imageElement) {
-        alert("Please upload an image first.");
+        alert("Please upload an image.");
         return;
       }
 
       const prediction = await model.predict(imageElement);
       const labelContainer = document.getElementById("label-container");
-      labelContainer.innerHTML = "";
+      labelContainer.innerHTML = ""; // clear previous
 
       prediction.forEach(p => {
-        const label = `${p.className}: ${(p.probability * 100).toFixed(2)}%`;
         const div = document.createElement("div");
-        div.textContent = label;
+        div.textContent = `${p.className}: ${(p.probability * 100).toFixed(2)}%`;
         labelContainer.appendChild(div);
       });
     }
